--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </li>
           <li class=" nav-item"><a href="charts.html"><i class="ft-pie-chart"></i><span class="menu-title" data-i18n="">Arsip</span></a>
           </li>
-          <li class=" nav-item"><a href="charts.html"><i class="ft-droplet"></i><span class="menu-title" data-i18n="">Berkas</span></a>
+          <li class=" nav-item"><a href="berkas.html"><i class="ft-droplet"></i><span class="menu-title" data-i18n="">Berkas</span></a>
           </li>
           <li class=" nav-item"><a href="charts.html"><i class="ft-layers"></i><span class="menu-title" data-i18n="">Pemberitahuan</span></a>
           </li>
