--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
           <li class="active"><a href="index.html"><i class="ft-home"></i><span class="menu-title" data-i18n="">Dashboard</span></a>
           </li>
-          <li class=" nav-item"><a href="charts.html"><i class="ft-pie-chart"></i><span class="menu-title" data-i18n="">Arsip</span></a>
+          <li class=" nav-item"><a href="arsip.html"><i class="ft-pie-chart"></i><span class="menu-title" data-i18n="">Arsip</span></a>
           </li>
           <li class=" nav-item"><a href="berkas.html"><i class="ft-droplet"></i><span class="menu-title" data-i18n="">Berkas</span></a>
           </li>
